--- a/src/components/Main.scss
+++ b/src/components/Main.scss
@@ -22,7 +22,7 @@
 
 .main__chat {
     height: 100%;
-    background: url("../assets/patterns/email-pattern.png");
+    background: url("~images/patterns/email-pattern.png");
 }
 
 .main__footer {
