--- a/src/App.scss
+++ b/src/App.scss
@@ -7,5 +7,6 @@
     width: 80vw;
     height: 80vh;
     background-color: white;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
 }
