--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -1,7 +1,7 @@
 .sidebar {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 30vw;
     height: 100%;
     background-color: white;
 }
