Login and register with Firebase . Issues with Refs to fix

--- a/src/screens/Register.scss
+++ b/src/screens/Register.scss
@@ -39,6 +39,7 @@
 
 .register__form-input {
     display: inline-flex;
+    align-items: center;
     width: 100%;
     padding-bottom: 8px;
     border-bottom: 2px solid gray;
