--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -67,8 +67,29 @@
 }
 
 .sidebar__chats {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
     background-color: white;
+}
+
+.sidebar__chats-add {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0.5rem;
+    border-radius: 50%;
+    background-color: #ff3838;
+    color: white;
+
+    transform-origin: bottom right;
+    transition: transform 0.1s linear;
+    &:hover {
+        transform: scale(1.2);
+        cursor: pointer;
+    }
 }
