Renamed Main to Conversation.js Redirection of Contact to contacts/:uid Moved ContactList into SideBar directly Route direction to Conversation Display contact name Search a contact Code cleanup

--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -26,7 +26,10 @@
     justify-content: flex-end;
     min-width: 100px;
 
-    a {
+    button {
+        background: none;
+        border: none;
+        outline: none;
         color: white;
         transition: transform 0.2s;
 
