--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -2,6 +2,9 @@
     position: relative;
     display: inline-flex;
     padding: 1rem;
+    background: none;
+    outline: none;
+    border: none;
     border-bottom: 1px solid #F9F9F9;
 
     &:hover {
@@ -9,10 +12,15 @@
     }
 }
 
+.contact-hide {
+    display: none;
+}
+
 .contact__name {
     font-size: 1rem;
     color: black;
     margin: 0;
+    text-align: left;
 }
 
 .contact__description {
