Chatbox auto scroll to bottom SendMessage as form instead of onClick Can't send empty messages anymore Removed username since it's "clientside" Main content div Animation message appear

--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -51,7 +51,7 @@
 .sidebar__search-entry {
     display: inline-flex;
     width: 100%;
-    padding: 0.2rem 0.5rem;
+    padding: 0.5rem;
     background-color: white;
     border-radius: 50px;
 
