🎉 Added something like an API, to send messages, get conversations.. easier

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -23,18 +23,8 @@
     text-align: left;
 }
 
-.contact__description {
+.contact__info {
     font-size: 0.8rem;
-    color: gray;
-    margin: 0;
-}
-
-.contact__time {
-    font-size: 0.8rem;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    text-align: right;
     color: gray;
     margin: 0;
 }
